fix: Inyectando nueva url para solucionar problemas de cors